ユーザー用のエンドポイントを実装
