# internal/stocker/presentation/routing/router.go
@@ -2,26 +2,48 @@ package routing
 
 import (
 	"h11/backend/internal/stocker"
+	"h11/backend/internal/stocker/common"
 
 	"github.com/gofiber/fiber/v2"
-    "github.com/gofiber/swagger" // swagger handler
-    _ "h11/backend/docs"
+	// swagger handler
+	"github.com/gofiber/swagger"
+	// jwtware
+	_ "h11/backend/docs"
+
+	jwtware "github.com/gofiber/contrib/jwt"
 )
 
 func SetRouting(f *fiber.App) {
 	// di
 	controllerSets := stocker.InitializeController()
 
+	// Swaggger
+    setSwagger(f)
+
+	// UserController
+	f.Post("/register", controllerSets.UserController.Create)
+	f.Post("/login", controllerSets.UserController.Login)
+
+	// JWT Middleware
+	// このコードより後述のエンドポイントに適応される
+	f.Use(jwtware.New(jwtware.Config{
+		SigningKey: jwtware.SigningKey{
+			JWTAlg: jwtware.HS256,
+			Key: common.GetJwtSecretKey(),
+		},
+	}))
+
 	// ItemController
 	f.Get("/items", controllerSets.ItemController.Index)
 	f.Post("/items", controllerSets.ItemController.Create)
-	f.Patch("/items/:id", controllerSets.ItemController.Update)
+	f.Patch("/items/:itemId", controllerSets.ItemController.Update)
 
 	// ItemStockController
-	f.Get("/items/:id/stocks", controllerSets.ItemStockController.Select)
-	f.Post("/items/:id/stocks", controllerSets.ItemStockController.Create)
+	f.Get("/itemStocks", controllerSets.ItemStockController.Index)
+	f.Get("/items/:itemId/stocks", controllerSets.ItemStockController.Select)
+	f.Post("/items/:itemId/stocks", controllerSets.ItemStockController.Create)
+	f.Patch("/items/:itemId/stocks", controllerSets.ItemController.Update)
 
-    setSwagger(f)
 }
 
 func setSwagger(f *fiber.App) {
